--- a/templates/base.html
+++ b/templates/base.html
@@ -6,73 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %} - Bible Quizzer</title>
-    <style type="text/css">
-        *,
-        *::before,
-        *::after {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            background-color: #2b2b2b;
-        }
-
-        .navbar {
-            width: 100%;
-            border-bottom: 3px solid black;
-            padding: 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .navbar-brand {
-            color: white;
-            font-size: 2rem;
-        }
-
-        .content {
-            margin: 0 auto;
-            width: 100%;
-            flex: 1 0 auto;
-        }
-
-
-        .footer {
-            display: flex;
-            justify-content: end;
-            align-items: center;
-        }
-
-        .footer-text {
-            color: white;
-            padding: 1rem;
-            font-size: 1.25rem;
-        }
-
-        .navbar ul {
-            display: flex;
-            list-style: none;
-            justify-content: space-around;
-            align-content: center;
-            flex: 1 1 0;
-        }
-
-        .navbar a {
-            color: #fbfbfb;
-            text-decoration: none;
-            font-size: 1.25rem;
-        }
-
-        .active-link a {
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', path='styles.css') }}">
     {% endblock %}
 </head>
 
@@ -82,7 +16,7 @@
         <nav class="navbar">
             <a class="navbar-brand" href="/">Bible Quizzer</a>
             <ul>
-                {% for link in links %}
+                {% for link in routes %}
                 {% if link[0] == request.path %}
                 <li class="nav-item active-link">
                     <a href="{{ link[0] }}">{{ link[1] }}</a>
