--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -13,6 +13,16 @@ body {
     background-color: #2b2b2b;
 }
 
+h1 {
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+    padding: 1rem;
+    margin: 0 auto;
+    width: 100%;
+}
+
+
 .navbar {
     width: 100%;
     border-bottom: 3px solid black;
@@ -62,4 +72,14 @@ body {
 
 .active-link a {
     color: black;
+}
+
+.bible {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    width: 80%;
+    margin: 0 auto;
 }
