--- a/templates/study/quiz.html
+++ b/templates/study/quiz.html
@@ -3,36 +3,23 @@
 
 {% block head %}
 {{super()}}
-<style>
-    .quiz-container {
-        width: 100%;
-        display: flex;
-        overflow-x: scroll;
-        scroll-snap-type: x mandatory;
-    }
-
-    .question-container {
-        scroll-snap-align: start;
-        flex: 1 0 auto;
-        width: 100%;
-        height: 100%;
-    }
-
-    .question {
-        height: 100%;
-        width: 100%;
-    }
-</style>
+{% block title %}
+{{ quiz.book }} {{ quiz.chapter }}
+{% endblock %}
+<style></style>
 {% endblock %}
 
 {% block content %}
-<h1>{{ quiz.book }} {{ quiz.chapter }}</h1>
+<h1>{{ quiz.book }} {{ quiz.chapter }} Quiz</h1>
 <div class="quiz-container">
-    {% for section in quiz.quiz_structure.sections %}
-    <div class="question-container">
-        <h2>{{ section.name }}</h2>
-        {% for q in section.questions %}
-        <div class="question">{{ q.question.text }}</div>
+    {% for section in quiz.quiz_structure.sections | reverse %}
+    <div class="section-container">
+        <h2>{{ section.name | capitalize }}</h2>
+        {% for q in section.questions | reverse %}
+        <div class="question-container">
+            <div class="question">{{ q.question.text }}</div>
+            <div class="answer">{{ q.question.correct_answer }}</div>
+        </div>
         {% endfor %}
     </div>
     {% endfor %}
