--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div
-    class="container mx-auto w-full h-screen flex flex-col items-center justify-center gap-10">
-    <h1 class="text-5xl">Home</h1>
-    <p
-        class="border-rounded bg-blue-200 h-[100px] flex items-center justify-center p-4">
-        Welcome to the home page!
-    </p>
+<div class="size-full">
+    <div class="size-full flex flex-col items-center justify-center gap-10">
+        <h1 class="text-5xl">Home</h1>
+        <p class="border-rounded flex items-center justify-center p-5">
+            Welcome to the home page!
+        </p>
+    </div>
 </div>
 {% endblock %}
