idk about formatting or layouts

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="size-full">
-    <div class="size-full flex flex-col items-center justify-center gap-10">
-        <h1 class="text-5xl">Home</h1>
-        <p class="border-rounded flex items-center justify-center p-5">
-            Welcome to the home page!
+<div class="size-full flex flex-col">
+    <h1 class="text-center text-5xl py-8">Home</h1>
+    <div class="size-full flex items-center justify-center">
+        <p class="border-rounded flex flex-col items-center justify-center p-5">
+            Welcome to the Bible Quiz App!
         </p>
     </div>
 </div>
