--- a/app/templates/quiz/index.html
+++ b/app/templates/quiz/index.html
@@ -4,12 +4,14 @@
 
 
 <div class="size-full flex flex-col">
-    <h1 class="text-center text-5xl p-4">Quiz</h1>
+    <h1 class="text-center text-5xl p-4">
+        Quiz</h1>
     <div class="size-full flex items-center justify-center">
         <p class="border-rounded flex flex-col items-center justify-center p-5">
-            Generate a quiz from the Bible!
+            Generate a quiz from the
+            Bible!
             <button hx-post="./quiz/generate" hx-swap="delete"
-                class="cursor-pointer border-rounded bg-blue-500 text-white p-4">
+                    class="cursor-pointer border-rounded bg-blue-500 text-white p-4">
                 Generate
             </button>
         </p>
