--- a/app/static/css/output.css
+++ b/app/static/css/output.css
@@ -663,9 +663,6 @@
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
-  }
   .self-end {
     align-self: flex-end;
   }
@@ -697,6 +694,9 @@
   }
   .p-5 {
     padding: calc(var(--spacing) * 5);
+  }
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
   }
   .text-center {
     text-align: center;
