--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,33 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bible Quiz</title>
     <link rel="stylesheet"
-        href="{{ url_for('static', filename='css/styles.css') }}">
+          href="{{ url_for('static', filename='css/styles.css') }}" />
     <link rel="stylesheet"
-        href="{{ url_for('static', filename='css/output.css') }}">
+          href="{{ url_for('static', filename='css/output.css') }}" />
     <link rel="apple-touch-icon" sizes="180x180"
-        href="{{ url_for('static', filename='icons/apple-touch-icon.png') }}">
+          href="{{ url_for('static', filename='icons/apple-touch-icon.png') }}" />
     <link rel="icon" type="image/png" sizes="32x32"
-        href="{{ url_for('static', filename='icons/favicon-32x32.png') }}">
+          href="{{ url_for('static', filename='icons/favicon-32x32.png') }}" />
     <link rel="icon" type="image/png" sizes="16x16"
-        href="{{ url_for('static', filename='icons/favicon-16x16.png') }}">
+          href="{{ url_for('static', filename='icons/favicon-16x16.png') }}" />
     <link rel="manifest"
-        href="{{ url_for('static', filename='icons/site.webmanifest') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+          href="{{ url_for('static', filename='icons/site.webmanifest') }}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet" />
     <script src="{{ url_for('static', filename='js/htmx.min.js' )}}"></script>
 </head>
 
 <body>
     <div class="flex flex-col lg:flex-row h-screen">
         <nav
-            class="min-w-[200px] sm:w-full border-b-2 border-b-[#872341] lg:max-w-[200px] lg:h-full lg:border-r-2 lg:border-r-[#872341] lg:relative lg:top-0 lg:left-0">
+             class="min-w-[200px] sm:w-full border-b-2 border-b-[#872341] lg:max-w-[200px] lg:h-full lg:border-r-2 lg:border-r-[#872341] lg:relative lg:top-0 lg:left-0">
             <ul
                 class="flex justify-evenly items-center gap-4 text-3xl p-4 lg:py-8 lg:flex-col lg:justify-normal">
                 <li>
